posiGen_FullsendBox/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>AHJ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMI AHJ</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>AHJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Numeric_ID__c</fullName>
        <formula>VALUE(Account__r.Numeric_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Required_to_do_a_Service_Cal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if there is any reason that would require the Customer to be there to perform a service call.</inlineHelpText>
        <label>Appointment Required to do a Service Cal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssessmentLink__c</fullName>
        <label>Assessment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AssessmentYear__c</fullName>
        <label>Assessment Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssessorMailingAddress__c</fullName>
        <label>Assessor Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessorOwnerName1__c</fullName>
        <label>Assessor Owner Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessorOwnerName2__c</fullName>
        <label>Assessor Owner Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessorPropertyClass__c</fullName>
        <label>Assessor Property Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_City__c</fullName>
        <description>City from Assessor Record</description>
        <inlineHelpText>City from Assessor Record</inlineHelpText>
        <label>Assessor City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Combined_City_State_ZIP__c</fullName>
        <formula>Assessor_City__c &amp; &quot;,&quot;&amp;&quot; &quot; &amp; text(Assessor_State__c)&amp;&quot; &quot; &amp; Assessor_ZIP__c</formula>
        <label>Assessor Combined City State ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Concatenated_Address__c</fullName>
        <formula>Assessor_House__c  &amp; &quot; &quot; &amp; if(isblank(text(Assessor_Street_Direction__c)),&quot; &quot;, text(Assessor_Street_Direction__c)  &amp; &quot; &quot;) &amp;  Assessor_Street_Name__c &amp; if(isblank( text(Assessor_Street_Type__c) ),&quot; &quot;,&quot; &quot;  &amp;   text(Assessor_Street_Type__c)) &amp; &quot;, &quot; &amp;  Assessor_City__c &amp; &quot;, &quot; &amp;  text(Assessor_State__c) &amp; &quot; &quot;  &amp;   Assessor_ZIP__c</formula>
        <label>Assessor Concatenated Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_District_Ward__c</fullName>
        <description>District or Ward from Assessor Record</description>
        <inlineHelpText>District or Ward from Assessor Record</inlineHelpText>
        <label>Assessor District / Ward</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_House__c</fullName>
        <description>House Number from Assessor Record</description>
        <inlineHelpText>House Number from Assessor Record</inlineHelpText>
        <label>Assessor House #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Lot__c</fullName>
        <description>Lot from Assessor Record</description>
        <inlineHelpText>Lot from Assessor Record</inlineHelpText>
        <label>Assessor Lot</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Owner_Name_3__c</fullName>
        <label>Assessor Owner Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Owner_Name_4__c</fullName>
        <label>Assessor Owner Name 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Square_Block__c</fullName>
        <description>Square or Block from Assessor Record</description>
        <inlineHelpText>Square or Block from Assessor Record</inlineHelpText>
        <label>Assessor Square / Block</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_State__c</fullName>
        <description>State from Assessor Record</description>
        <inlineHelpText>State from Assessor Record</inlineHelpText>
        <label>Assessor State</label>
        <picklist>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessor_Street_Direction__c</fullName>
        <description>Street Direction from Assessor Record</description>
        <inlineHelpText>Street Direction from Assessor Record</inlineHelpText>
        <label>Assessor Street Direction</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessor_Street_Name__c</fullName>
        <description>Street Name from Assessor Record</description>
        <inlineHelpText>Street Name Only, without type or direction</inlineHelpText>
        <label>Assessor Street Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Street_Number_and_Name__c</fullName>
        <formula>Assessor_House__c +&quot; &quot;+TEXT(Assessor_Street_Direction__c) +&quot; &quot;+ Assessor_Street_Name__c +&quot; &quot;+ TEXT(Assessor_Street_Type__c)</formula>
        <label>Assessor Street Number and Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Street_Type__c</fullName>
        <label>Assessor Street Type</label>
        <picklist>
            <picklistValues>
                <fullName>Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulevard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arcade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluffs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bypass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Causeway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessor_ZIP__c</fullName>
        <description>ZIP code from Assessor Record</description>
        <inlineHelpText>ZIP code from Assessor Record</inlineHelpText>
        <label>Assessor ZIP</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingValue__c</fullName>
        <label>Building Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_Mills__c</fullName>
        <label>City Mills</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County/Parish</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (County/Parish)</relationshipLabel>
        <relationshipName>Properties_In_This_County</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_Sign_Date_2__c</fullName>
        <formula>IF(ISBLANK( AssessorOwnerName2__c ),&quot;&quot;,&quot;dl.datesign.2&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DL Sign Date 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_Sign_Date__c</fullName>
        <formula>IF(ISBLANK( AssessorOwnerName1__c ),&quot;&quot;,&quot;dl.datesign.1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DL Sign Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Signature_Anchor_2__c</fullName>
        <formula>IF(ISBLANK( AssessorOwnerName2__c ),&quot;&quot;,&quot;dl.signhere.2&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Signature Anchor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Signature_Anchor__c</fullName>
        <formula>IF (ISBLANK(AssessorOwnerName1__c),&quot;&quot;,&quot;dl.signhere.1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Signature Anchor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider_Address__c</fullName>
        <formula>Opportunity_Created_From__r.Electricity_Provider__r.BillingStreet</formula>
        <label>Electricity Provider Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider_Email__c</fullName>
        <formula>Opportunity_Created_From__r.Electricity_Provider__r.Utility_Email__c</formula>
        <label>Electricity Provider Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider_Fax__c</fullName>
        <formula>Opportunity_Created_From__r.Electricity_Provider__r.Fax</formula>
        <label>Electricity Provider Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider_Telephone__c</fullName>
        <formula>Opportunity_Created_From__r.Electricity_Provider__r.Phone</formula>
        <label>Electricity Provider Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_First_Payment_Date__c</fullName>
        <formula>if( ISPICKVAL(Assessor_State__c,&quot;LA&quot;),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 9,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 90),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 8,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 120),1)),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 6,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 180),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 5,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 210),1))
)</formula>
        <label>Estimated First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Begin__c</fullName>
        <formula>if( ISPICKVAL(Assessor_State__c,&quot;LA&quot;),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 10,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 60),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 9,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 90),1)),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 9,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 90),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 8,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 120),1))
)</formula>
        <label>Estimated Install Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Complete__c</fullName>
        <formula>if( ISPICKVAL(Assessor_State__c,&quot;LA&quot;),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 9,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 90),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 8,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 120),1)),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 7,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 150),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 6,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 180),1))
)</formula>
        <label>Estimated Install Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Interconnect__c</fullName>
        <formula>if( ISPICKVAL(Assessor_State__c,&quot;LA&quot;),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 9,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 90),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 8,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 120),1)),

IF(DAY(Sales_Appointment__c) &lt; 16,
DATE(IF(MONTH(Sales_Appointment__c) &gt; 7,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 150),1),
DATE(IF(MONTH(Sales_Appointment__c) &gt; 6,YEAR(Sales_Appointment__c)+ 1,YEAR(Sales_Appointment__c)),MONTH(Sales_Appointment__c + 180),1))
)</formula>
        <label>Estimated Interconnect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_DC__c</fullName>
        <formula>Opportunity_Created_From__r.Exceptions_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptions DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio__c</fullName>
        <label>Folio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Steep_Roof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Steep Roof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portion_of_Roof_Facing_South_or_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portion of Roof Facing South or West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ladder_Needed_for_Service_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder Needed for Service Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LandAreaSqFt__c</fullName>
        <label>Land Area Sq Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LandValue__c</fullName>
        <label>Land Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Numeric_ID__c</fullName>
        <label>Lead Numeric ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationAddress__c</fullName>
        <label>Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This is the geolocation of the property.</description>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MunicipalDistrict__c</fullName>
        <label>Municipal District/Ward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipal_Square__c</fullName>
        <label>Municipal Square/Block</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Municipality_ID__c</fullName>
        <formula>Municipality__r.Id</formula>
        <label>Municipality ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AHJ</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipality</value>
            </filterItems>
            <filterItems>
                <field>Account.State__r.Acronym__c</field>
                <operation>equals</operation>
                <valueField>$Source.Assessor_State__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Municipality)</relationshipLabel>
        <relationshipName>Properties_In_this_Municipality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Units</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <externalId>true</externalId>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Created From</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties_Created_On</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reasons_for_Appt_Reqd_for_Service__c</fullName>
        <label>Other Reasons for Appt Reqd for Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PG_State__c</fullName>
        <formula>HYPERLINK(County__r.State__c,  County__r.State__r.Name ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parish_StateID__c</fullName>
        <formula>County__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parish StateID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Assessment_Search_Website__c</fullName>
        <formula>Municipality__r.Property_Assessment_Search_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Assessment Search Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_Appt_Needed_For_SC_as_Text__c</fullName>
        <formula>IF ( INCLUDES ( Reasons_Appt_Needed_for_Service_Cll__c , &quot;Gate&quot; ), &quot;Gate; &quot;,null ) &amp; 
IF ( INCLUDES ( Reasons_Appt_Needed_for_Service_Cll__c , &quot;Dog&quot; ), &quot;Dog; &quot;,null ) &amp; IF ( INCLUDES ( Reasons_Appt_Needed_for_Service_Cll__c , &quot;Locks&quot; ), &quot;Locks; &quot;,null ) &amp; IF ( INCLUDES ( Reasons_Appt_Needed_for_Service_Cll__c , &quot;Inside Breakers&quot; ), &quot;Inside Breakers; &quot;,null ) &amp; IF ( INCLUDES ( Reasons_Appt_Needed_for_Service_Cll__c , &quot;Other&quot; ), Other_Reasons_for_Appt_Reqd_for_Service__c + &quot;; &quot; ,null ) &amp; IF ( INCLUDES ( Reasons_Appt_Needed_for_Service_Cll__c , &quot;Required By Customer&quot; ), &quot;Required By Customer;&quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reasons Appt Needed For SC as Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_Appt_Needed_for_Service_Cll__c</fullName>
        <label>Reasons Appt Needed for Service Call</label>
        <picklist>
            <picklistValues>
                <fullName>Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required By Customer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <label>Residence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stand-Alone Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condominium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Appointment__c</fullName>
        <description>Date and Time of Sales Appointment for Docusign Contract</description>
        <inlineHelpText>Date and Time of Sales Appointment for Docusign Contract</inlineHelpText>
        <label>Sales Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpecialTaxDistrict__c</fullName>
        <label>Special Tax District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StreetName__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetNumber__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetPostDirection__c</fullName>
        <label>Street Post Direction</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StreetPrefix__c</fullName>
        <label>Street Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StreetSuffix__c</fullName>
        <label>Street Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Ave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blvd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bnd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hwy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ldg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pkwy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Way</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <formula>TEXT(Assessor_Street_Direction__c) +&quot; &quot;+ Assessor_Street_Name__c +&quot; &quot;+ TEXT(Assessor_Street_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessor Combined Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubdivisionName__c</fullName>
        <label>Subdivision Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>